desafio de simulador

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Desafio Simulador</title>
 </head>
 <body>
     <h1>Rodriguez Adrian</h1>
-    <p>Primer desafío complementario. Se trata de establecer una fecha para un turno en días hábiles.</p>
+    <p>Desafío de simulador. Se trata de establecer promedio de alumno</p>
 
-    <script src="main.js"></script>
+    <script src="simInteractivo.js"></script>
 </body>
 </html>
