Desafio complementario nro 2

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Simulador</title>
+    <title>Desafio Complementario</title>
 </head>
 <body>
     <h1>Rodriguez Adrian</h1>
-    <p>Desafío de simulador. Se trata de establecer promedio de alumno</p>
-
-    <script src="simInteractivo.js"></script>
+    <p>Desafío Complementario. Se intenta establecer un turno de paseo aplicando un Array.</p>
+<script src="main.js"></script>
+    <!-- <script src="simInteractivo.js"></script> -->
 </body>
 </html>
